@@ -1,3 +1,7 @@
+2001-01-26  Dekel Tsur  <dekelts@tau.ac.il>
+
+	* lyxstring.C: Fix some assertions.
+
 2001-01-23  Dekel Tsur  <dekelts@tau.ac.il>
 
 	* lstrings.C (strip): Add a fix for compilers with broken
